# libde265

./: Makefile.am  Makefile.in  aclocal.m4  changelog  config.h.in  configure  configure.ac  control  copyright  libde265-0.symbols  rules
debian/: .gitlab-ci.yml  changelog  clean  control  libde265-0.symbols  not-installed  rules  watch
debian/patches/: 0001-CVE-2022-1253.patch  0003-CVE-2021-36410.patch  0006-CVE-2021-35452.patch  CVE-2020-21596-global-buffer-overflow.patch  CVE-2021-35452.patch  CVE-2021-36408.patch  CVE-2021-36409.patch  CVE-2021-36410.patch  CVE-2021-36411.patch  CVE-2023-27102.patch  CVE-2023-27103.patch  (+12 more)
dec265/: Makefile.am  Makefile.in
libde265/: Makefile.in  configparam.h  de265-version.h  de265.cc  de265.h  deblock.cc  decctx.cc  decctx.h  image-io.cc  image-io.h  motion.cc  quality.h  sao.cc  slice.cc  sps.cc
libde265/encoder/: Makefile.am  encoder-context.cc
libde265/encoder/algo/: Makefile.am
patches/: 0001-fill-32x32-scaling-matrices.patch  0002-CVE-2021-36411.patch  0004-CVE-2021-36409.patch  0005-CVE-2021-36408.patch  CVE-2020-21599.patch  CVE-2022-43245-fix-asan-wildpointer-apply_sao_internal.patch  CVE-2023-27102.patch  CVE-2023-27103.patch  CVE-2023-47471.patch  CVE-2023-49465.patch  CVE-2023-49467.patch  CVE-2023-49468.patch  check-4-negative-Q-value.patch  disable-neon.patch  disable_tools.patch  ffmpeg_2.9.patch  fix-private-libs-pc.patch  fix-use-after-free.patch  recycle_sps_if_possible.patch  reject_reference_pics_from_different_sps.patch  series
sherlock265/: Makefile.in  VideoDecoder.cc
source/: include-binaries
(+5 files in other folders)
